# app-aptos

./: CHANGELOG.md  Makefile  README.md  test.py
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: cflite_cron.yml  cflite_pr.yml  clang-scan.yml  codeql_checks.yml  documentation_generation.yml  python_client_checks.yml  swap-ci-workflow.yml  unit_tests.yml
doc/: COMMANDS.md
fuzzing/: CMakeLists.txt  README.md  build.sh  coverage.sh  run.sh
fuzzing/extra/: TxParser.cmake
src/: app_main.c  constants.h  globals.h  sw.h
src/apdu/: dispatcher.c
src/bcs/: types.h
src/common/: parse.c  parse.h
src/handler/: get_public_key.c  get_public_key.h  get_version.c  sign_tx.c
src/swap/: handle_check_address.c  handle_get_printable_amount.c  handle_swap_sign_transaction.c  handle_swap_sign_transaction.h
src/transaction/: deserialize.c  deserialize.h  utils.c  utils.h
src/ui/: bagl_display.c  bagl_menu.c  common_display.c  common_settings.c  display.h  nbgl_display.c  nbgl_display.h  nbgl_display_address.c  nbgl_display_message.c  nbgl_display_transaction.c  nbgl_menu.c
tests/: README.md  requirements.txt  test_app_mainmenu.py  test_fa_sign.py  test_name_version.py  test_pubkey_cmd.py  test_sign_cmd.py  test_version_cmd.py  utils.py
tests/application_client/: aptos_command_sender.py  setup.cfg
unit-tests/: test_tx_utils.c
